[ios] Fixes crash where restoring recently closed on incognito.

RecentTabs was changed and it can now be opened from incognito,
for this reason we now need to update restoreTabWithSessionID
to make sure it always uses the non-incognito browserState.

Bug: 866854
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ifc7147df943997a1f0784af926ac95cf9735fdaa
Reviewed-on: https://chromium-review.googlesource.com/1150579
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578161}