ios/chrome/browser/ui/browser_view_controller.mm
@@ -4558,7 +4558,8 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
       TabRestoreServiceDelegateImplIOSFactory::GetForBrowserState(
           self.browserState);
   sessions::TabRestoreService* restoreService =
-      IOSChromeTabRestoreServiceFactory::GetForBrowserState(self.browserState);
+      IOSChromeTabRestoreServiceFactory::GetForBrowserState(
+          self.browserState->GetOriginalChromeBrowserState());
   restoreService->RestoreEntryById(delegate, sessionID,
                                    WindowOpenDisposition::CURRENT_TAB);
 }
